https://github.com/furnalis/goit-markup-hw-03.git

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,15 @@
   --second-color: #2196f3;
   --secon-black: #212121;
   --color-grey: #757575;
+  --color-header-line: rgba(236, 236, 236, 1);
+  --color-border-line: #eeeeee;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
@@ -43,6 +51,10 @@ button {
 .black-header:focus {
   color: var(--second-color);
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .first-header {
   font-weight: 700;
   font-size: 36px;
@@ -57,6 +69,7 @@ button {
   font-weight: 700;
   font-size: 26px;
   line-height: 3.1;
+  margin-right: 93px;
 }
 .header-style {
   color: var(--text-color);
@@ -71,10 +84,13 @@ button {
 .big-text {
   font-weight: 900;
   font-size: 44px;
-  line-height: 6;
+  line-height: 1.4;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--first-color);
+  text-align: center;
+  margin-top: 200px;
+  width: 696px;
 }
 .lorem-ipsum {
   font-weight: 700;
@@ -84,19 +100,25 @@ button {
   color: var(--secon-black);
 }
 .lorem-text {
+  font-weight: 400;
   font-size: 14px;
-  line-height: 2.4;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
   color: var(--color-grey);
 }
 .name,
 .position {
   line-height: 1.9;
+  text-align: center;
 }
 .name {
   color: var(--secon-black);
+  text-align: center;
+  padding-top: 30px;
 }
 .position {
   color: var(--color-grey);
+  padding-bottom: 30px;
 }
 .customers {
   font-weight: 700;
@@ -105,22 +127,40 @@ button {
   letter-spacing: 0.06em;
   color: var(--secon-black);
 }
+
+.project-type {
+  color: var(--color-grey);
+  line-height: 1.9;
+}
+
 .first-button {
   background: var(--second-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: var(--first-color);
   font-weight: 700;
-  line-height: 3;
+  line-height: 1.9;
   letter-spacing: 0.06em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  padding: 10px 41px 10px 42px;
+  margin-bottom: 200px;
 }
 .second-button {
   background: #f5f4fa;
+  border: none;
   border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
   font-weight: 500;
-  line-height: 2.6;
+  font-size: 16px;
+  line-height: 26px;
   text-align: center;
+  letter-spacing: 0.03em;
   color: var(--secon-black);
+  padding: 6px 22px;
 }
 .second-button:hover,
 .second-button:focus {
@@ -132,8 +172,107 @@ button {
   font-size: 14px;
   line-height: 2.4;
   color: var(--first-color);
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
 .footer-adress:hover,
 .footer-adress:focus {
   color: var(--second-color);
+}
+
+header {
+  border-bottom: 1px solid var(--color-header-line);
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+  gap: 46px;
+  margin-right: 371px;
+  padding: 32px 0;
+}
+
+.big-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.lorem-item {
+  width: 270px;
+}
+
+.lorem-list {
+  display: flex;
+  gap: 30px;
+  margin-top: 94px;
+  margin-bottom: 94px;
+  justify-content: center;
+}
+
+.job-list {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding-bottom: 94px;
+}
+
+.squad {
+  background: #f5f4fa;
+}
+
+.squad-item {
+  background-color: var(--first-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+
+.project {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 94px;
+}
+
+.project-description {
+  border-right: 1px solid var(--color-border-line);
+  border-left: 1px solid var(--color-border-line);
+  border-bottom: 1px solid var(--color-border-line);
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 20px 24px;
+}
+
+.header-contact {
+  display: flex;
+  gap: 50px;
 }
