--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,6 @@ button {
   font-weight: 700;
   line-height: 1.9;
   letter-spacing: 0.06em;
-  align-items: center;
-  text-align: center;
   padding: 10px 41px 10px 42px;
   margin-bottom: 200px;
   border: none;
@@ -161,7 +159,6 @@ button {
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
-  text-align: center;
   color: var(--secon-black);
   padding: 6px 22px;
 }
@@ -246,8 +243,7 @@ header {
 }
 
 .footer-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 0;
 }
 
 .footer-adress {
